Agrego los diseños de ezequiel, guentes, css, etc

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasList.html
@@ -1,142 +1,80 @@
 ﻿	<!-- COMIENZO SECCION LISTA DE OFERTAS -->
-<!--<section class="ofertas">
+<!-- COMIENZO SECCION LISTA DE OFERTAS -->
 
+<div class="t_list">
+    <h1>Listado de ofertas disponibles</h1>
 
+</div>
 
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo.png">
-            <h2>nombre empresa</h2>
-        </div>
+<section class="ofertas">
 
-        <div class="info_ofer">
-            <h1>DISEÑO GRAFICO Y EDICIÓN DE IMAGEN.</h1>
+    <div class="sidebar">
+        <h3><span class="icon-bullhorn icono"></span> Rubro</h3>
+        <ul>
+            <li><a href="#">Informatica</a></li>
+            <li><a href="#">Construcción</a></li>
+            <li><a href="#">Ejecutivo</a></li>
+            <li><a href="#">Economia</a></li>
+            <li><a href="#">Contable</a></li>
+            <li><a href="#">Transporte</a></li>
+            <li><a href="#">Atencion al publico</a></li>
+            <li><a href="#">Pre-ventista</a></li>
+            <li><a href="#">Electricidad</a></li>
+            <li><a href="#">Seguridad</a></li>
+        </ul>
+        <h3><span class="icon-location icono"></span> Ubicación</h3>
+        <ul>
+            <li><a href="#">Buenos aires</a></li>
+            <li><a href="#">Santa fe</a></li>
+            <li><a href="#">Cordoba</a></li>
+            <li><a href="#">Tucuman</a></li>
+            <li><a href="#">Santiago del estero</a></li>
+            <li><a href="#">San juan</a></li>
+            <li><a href="#">Tierra del fuego</a></li>
+            <li><a href="#">Mendoza</a></li>
+            <li><a href="#">Salta</a></li>
+            <li><a href="#">Otros (11)</a></li>
+        </ul>
+        <h3><span class="icon-calendar icono"></span> Fecha de oferta</h3>
+        <ul>
+            <li><a href="#">Hace 3 dias</a></li>
+            <li><a href="#">Hace una semana</a></li>
+            <li><a href="#">Hace 15 dias</a></li>
+            <li><a href="#">Ultimo mes</a></li>
+        </ul>
+        <h3><span class="icon-clock icono"></span> Disponibilidad horaria</h3>
+        <ul>
+            <li><a href="#">Por la mañana</a></li>
+            <li><a href="#">Por la tarde</a></li>
+            <li><a href="#">Horario corrido</a></li>
+            <li><a href="#">Full time</a></li>
+        </ul>
+    </div>
 
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#" class="md-primary">ver mas</a>
-        </div>
-    </article>
-
-
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo2.png">
-            <h2>nombre empresa</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>MARKETING DIGITAL, SOCIAL MANAGMENT.</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#">ver mas</a>
-        </div>
-    </article>
-
-
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo3.png">
-            <h2>nombre empresa</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>DESARROLLO DE APLICACIONES ANDROID.</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PRIVADO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#">ver mas</a>
-        </div>
-    </article>
-
-
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo4.png">
-            <h2>nombre empresa</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>JAVASCRIPT Y MANEJO DE NODE JS.</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#">ver mas</a>
-        </div>
-    </article>
-
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo2.png">
-            <h2>nombre empresa</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>MARKETING DIGITAL, SOCIAL MANAGMENT.</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PUBLICO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#">ver mas</a>
-        </div>
-    </article>
-
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo.png">
-            <h2>nombre empresa</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>DISEÑO GRAFICO Y EDICIÓN DE IMAGEN.</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: 07/04/2016 a 21/04/2016</h4> <h5>PRIVADO</h5>
-            </div>
-            <h3>Insertar en esta seccion una breve descripción de la oferta laboral disponible, en la que se especifica la area en la que se desempeñara el posible futuro empleado que aplique para la misma...</h3>
-            <a href="#">ver mas</a>
-        </div>
-    </article>
-</section>-->
-
-
-<section class="ofertas" dir-paginate="oferta in ofertas | itemsPerPage: ofertasPerPage" total-items="totalOfertas" current-page="pagination.current">
-    <article>
-        <div class="logo_ofer">
-            <img src="img/logo.png">
-            <h2>{{ oferta.Empresa.Nombre }}</h2>
-        </div>
-
-        <div class="info_ofer">
-            <h1>{{ oferta.Nombre }}</h1>
-
-            <hr>
-            <div class="d_ofer">
-                <h4>fecha de convocatoria: {{ oferta.FechaInicioConvocatoria  |  date:'dd/MM/yyyy' }} a {{ oferta.FechaFinConvocatoria  |  date:'dd/MM/yyyy' }}</h4>
-                <div ng-switch on="oferta.Publica">
-                    <h5 ng-switch-when="true">Pública</h5>
-                    <h5 ng-switch-when="false">Privada</h5>
+    <div class="lista">
+        <div dir-paginate="oferta in ofertas | itemsPerPage: ofertasPerPage" total-items="totalOfertas" current-page="pagination.current">
+            <article>
+                <div class="logo_ofer">
+                    <img src="img/logo.png">
+                    <h2>{{ oferta.Empresa.Nombre }}</h2>
                 </div>
-            </div>
-            <h3>{{ oferta.Descripcion }}</h3>
-            <a href="#">ver más</a>
-        </div>
-    </article>
-</section>
-<dir-pagination-controls on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>
+                <div class="info_ofer">
+                    <h1>{{ oferta.Nombre }}</h1>
+                    <hr>
+                    <div class="d_ofer">
+                        <h4>fecha de convocatoria: {{ oferta.FechaInicioConvocatoria  |  date:'dd/MM/yyyy' }} a {{ oferta.FechaFinConvocatoria  |  date:'dd/MM/yyyy' }}</h4>
+                        <div ng-switch on="oferta.Publica">
+                            <h5 ng-switch-when="true">Pública</h5>
+                            <h5 ng-switch-when="false">Privada</h5>
+                        </div>
+                    </div>
+                    <h3>{{ oferta.Descripcion }}</h3>
+                    <a href="#">ver más</a>
+                </div>
+            </article>
+        </div>        
+        <dir-pagination-controls on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>        
+   </div>
+
+
+
