--- a/VLaboralWeb/fonts/style.css
+++ b/VLaboralWeb/fonts/style.css
@@ -1,17 +1,17 @@
 @font-face {
-    font-family: 'unmundo';
-    src:    url('fonts/unmundo.eot?z3q6ne');
-    src:    url('fonts/unmundo.eot?z3q6ne#iefix') format('embedded-opentype'),
-        url('fonts/unmundo.ttf?z3q6ne') format('truetype'),
-        url('fonts/unmundo.woff?z3q6ne') format('woff'),
-        url('fonts/unmundo.svg?z3q6ne#unmundo') format('svg');
+    font-family: 'icomoon';
+    src:    url('fonts/icomoon.eot?l42xlv');
+    src:    url('fonts/icomoon.eot?l42xlv#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?l42xlv') format('truetype'),
+        url('fonts/icomoon.woff?l42xlv') format('woff'),
+        url('fonts/icomoon.svg?l42xlv#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'unmundo' !important;
+    font-family: 'icomoon' !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -24,37 +24,49 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-newspaper:before {
-    content: "\e902";
-}
 .icon-image:before {
-    content: "\e900";
+    content: "\e90d";
 }
-.icon-images:before {
-    content: "\e903";
+.icon-bullhorn:before {
+    content: "\e91a";
 }
 .icon-profile:before {
-    content: "\e901";
+    content: "\e923";
 }
 .icon-stack:before {
-    content: "\e906";
+    content: "\e92e";
 }
-.icon-user:before {
-    content: "\e90a";
+.icon-location:before {
+    content: "\e947";
 }
-.icon-user-check:before {
-    content: "\e905";
+.icon-location2:before {
+    content: "\e948";
 }
-.icon-spinner9:before {
-    content: "\e904";
+.icon-clock:before {
+    content: "\e94e";
+}
+.icon-calendar:before {
+    content: "\e953";
 }
 .icon-spinner10:before {
-    content: "\e908";
+    content: "\e983";
 }
-.icon-arrow-down:before {
-    content: "\e907";
+.icon-stats-dots:before {
+    content: "\e99b";
 }
-.icon-arrow-down2:before {
-    content: "\e909";
+.icon-clipboard:before {
+    content: "\e9b8";
+}
+.icon-download2:before {
+    content: "\e9c5";
+}
+.icon-earth:before {
+    content: "\e9ca";
+}
+.icon-exit:before {
+    content: "\ea14";
+}
+.icon-mail4:before {
+    content: "\ea86";
 }
 
