--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
@@ -1,7 +1,35 @@
-﻿<h1>Menu de Profesional</h1>
-<md-button class="md-raised md-warn" ui-sref="profesional.perfil">
-    Perfil del Profesional
-</md-button>
-<md-button class="md-raised md-warn" ui-sref="profesional.ofertas">
-    Ofertas del Profesional
-</md-button>
+﻿<nav>
+    <a href="index.html">UN<span>MUNDO</span></a>
+    <ul>
+        <a href="#">
+            <li><span class="icon-earth icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><span class="icon-mail4 icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><img src="img/perfil.jpg" alt=""></li>
+        </a>
+        <a ng-click="logOut()">
+            <li><span class="icon-exit icono_de"></span></li>
+        </a>
+    </ul>
+</nav>
+
+<aside>
+    <div class="p_info">
+        <img src="img/perfil.jpg" alt="">
+        <div class="t_info">
+            <h5>bienvenido</h5>
+            <h2><a ui-sref="profesional.perfil">{{authentication.userName}}</a></h2>
+        </div>
+    </div>
+    <div class="menu_s">
+        <ul>
+            <h1>OFERTAS</h1>
+            <a ui-sref="profesional.ofertas">
+                <li><span class="icon-bullhorn"></span> Ver ofertas</li>
+            </a>
+        </ul>
+    </div>
+</aside>
