--- a/VLaboralWeb/App/Seguridad/Partials/registroEmpresa.html
+++ b/VLaboralWeb/App/Seguridad/Partials/registroEmpresa.html
@@ -2,24 +2,18 @@
     <section class="login_inicio bg_re">
         <form action="">
             <h1>Registra tu empresa</h1>
-            <!-- 			<input type="text" placeholder="Ingrese el nombre de la empresa" class="t_form" />
-                        <input type="text" placeholder="Ingrese el CUIT" class="t_form" />
-                        <input type="text" placeholder="Ingrese la razon social" class="t_form" />
-                        <input type="text" placeholder="Ingrese un e-mail de contacto" class="t_form" />
-                        <input type="password" placeholder="Ingrese una contraseña" class="t_form" />
-                        <input type="password" placeholder="Repita la contraseña" class="t_form" />
-                        <input type="submit" name="enviar" value="ENVIAR" class="enviar"> -->
+            
             <md-input-container class="ic">
 
                 <label class="lbl">Ingrese la razon social</label>
-                <input ng-model="rp_pass" class="inp">
+                <input ng-model="nuevoUser.RazonSocial" class="inp" required>
 
             </md-input-container>
 
             <md-input-container class="ic">
 
                 <label class="lbl">Ingrese el CUIT</label>
-                <input ng-model="rp_dni" class="inp">
+                <input ng-model="nuevoUser.ValorIdentificacion" class="inp" required>
 
             </md-input-container>
 
@@ -28,26 +22,29 @@
             <md-input-container class="ic">
 
                 <label class="lbl">Ingrese un e-mail de contacto</label>
-                <input ng-model="rp_rpass" class="inp">
+                <input type="email" ng-model="nuevoUser.Email" class="inp" required>
 
             </md-input-container>
 
             <md-input-container class="ic">
 
                 <label class="lbl">Ingrese una contraseña</label>
-                <input ng-model="rp_rpass" class="inp">
+                <input type="password" ng-model="nuevoUser.Password" class="inp" required>
 
             </md-input-container>
 
             <md-input-container class="ic">
 
                 <label class="lbl">Repita la contraseña</label>
-                <input ng-model="rp_rpass" class="inp">
+                <input type="password" ng-model="nuevoUser.ConfirmPassword" class="inp" required>
 
             </md-input-container>
 
-            <md-button class="md-primary md-raised" style="background:rgb(62, 138, 187);">Registrarse</md-button>
-
+            <md-button class="md-primary md-raised" style="background:rgb(62, 138, 187);" ng-click="registrarEmpresa(nuevoUser)">Registrarse</md-button>
+            
+            <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+                {{message}}
+            </div>
         </form>
     </section>
 </md-container>
