--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -1,4 +1,20 @@
-﻿<h1>Dashboard del Profesional</h1>
-<div ui-view="menu@"></div>
+﻿<nav>
+    <a href="index.html">UN<span>MUNDO</span></a>
+    <ul>
+        <a href="#">
+            <li><span class="icon-earth icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><span class="icon-mail4 icono_de"></span></li>
+        </a>
+        <a href="#">
+            <li><img src="img/perfil.jpg" alt=""></li>
+        </a>
+        <a href="">
+            <li><span class="icon-exit icono_de"></span></li>
+        </a>
+    </ul>
+</nav>
+<aside ui-view="menu@"></aside>
 
 <div ui-view="contenido@"></div>
