--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalMenu.html
@@ -1,7 +1,17 @@
-﻿<h1>Menu de Profesional</h1>
-<md-button class="md-raised md-warn" ui-sref="profesional.perfil">
-    Perfil del Profesional
-</md-button>
-<md-button class="md-raised md-warn" ui-sref="profesional.ofertas">
-    Ofertas del Profesional
-</md-button>
+﻿<div class="p_info">
+    <img src="img/perfil.jpg" alt="">
+    <div class="t_info">
+        <h5>bienvenido</h5>
+        <h2>Ezequiel Brandan</h2>
+    </div>
+</div>
+<div class="menu_s">
+    <ul>
+
+        <h1>OFERTAS</h1>
+
+        <a href="#">
+            <li><span class="icon-bullhorn"></span> Ver ofertas</li>
+        </a>
+    </ul>
+</div>
